# kodegen-mcp-client

./: Cargo.toml  README.md
examples/: validate_test.rs
src/: error.rs  headers.rs  lib.rs  responses.rs  tools.rs  validation.rs
src/transports/: http.rs  mod.rs  stdio.rs
task/: 000-code-review-summary.md  001-unnecessary-conditional-for-empty-env-map.md  002-missing-stderr-handling-child-process.md  003-string-allocation-on-every-tool-call.md  004-no-child-process-exit-status-checking.md  005-missing-env-inheritance-documentation.md  006-no-working-directory-validation.md  007-error-context-loss-in-conversions.md  008-potential-resource-leak-on-build-error.md  009-http-client-missing-timeout-configuration.md  010-no-validation-of-tool-names.md  011-inconsistent-timeout-error-messages.md  012-missing-builder-validation.md  013-duplicated-client-info-construction.md
tests/: stdio_transport_tests.rs
