[package]
name = "kodegen_mcp_client"
version = "0.3.0"
edition = "2024"
description = "KODEGEN.ᴀɪ: Database query and schema exploration MCP tools for AI agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-mcp-client"
readme = "README.md"
categories = ["development-tools","api-bindings"]
keywords = [
    "mcp",
    "client",
    "agent",
    "claude"
]

[dependencies]
# MCP SDK with client features
rmcp = { version = "0.9", features = ["client", "transport-child-process", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (for examples)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Process management (for cleanup on error in examples)
sysinfo = "0.37"

# Command path validation
which = "8"

[dev-dependencies]
tempfile = "3"  # For filesystem test fixtures
